Adaugarea primului endpoint pentru admin

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.6
-WORKDIR /admin-interface
+WORKDIR /admin
 COPY requirements.txt ./
 RUN pip install -U setuptools
 RUN pip install -r requirements.txt
-COPY src /admin-interface
-CMD ["python", "admin.py", "admin"]
+COPY src /admin
+CMD ["python", "admin.py"]
