--- a/admin-interface/Dockerfile
+++ b/admin-interface/Dockerfile
@@ -4,4 +4,4 @@ COPY requirements.txt ./
 RUN pip install -U setuptools
 RUN pip install -r requirements.txt
 COPY src /admin-interface
-CMD ["python", "admin-interface.py", "admin"]
+CMD ["python", "admin-interface.py", "http://admin:8000"]
