--- a/docker-swarm.yml
+++ b/docker-swarm.yml
@@ -10,12 +10,9 @@ services:
       - "8500:3306"
     volumes:
       - ./data:/var/lib/mysql
-      - ./db:/docker-entrypoint-initdb.d/:ro
+      - ./db:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: rootpass
-      MYSQL_DATABASE: cinema_service
-      MYSQL_USER: admin_cinema_service
-      MYSQL_PASSWORD: supersecret_admin
 
   admin:
     image: anamariamicu/cinema-proiect:admin
