--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -4,4 +4,5 @@ COPY requirements.txt ./
 RUN pip install -U setuptools
 RUN pip install -r requirements.txt
 COPY src /admin
+EXPOSE 8000
 CMD ["python", "admin.py"]
