--- a/docker-swarm.yml
+++ b/docker-swarm.yml
@@ -13,6 +13,10 @@ services:
       - ./db:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: rootpass
+    networks:
+      - serverdb
+      - admindb
+      - grafanadb
 
   admin:
     image: anamariamicu/cinema-proiect:admin
@@ -24,6 +28,9 @@ services:
       - '8000:8000'
     depends_on:
       - db
+    networks:
+      - admininterface
+      - admindb
       
   admin-interface:
     image: anamariamicu/cinema-proiect:admin-interface
@@ -34,7 +41,65 @@ services:
     ports:
       - '8001:8001'
     depends_on:
-      - db
       - admin-interface
+      - db
+    networks:
+      - admininterface
     stdin_open: true
     tty: true
+
+  server:
+    image: anamariamicu/cinema-proiect:server
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+    ports:
+      - '8002:8002'
+    depends_on:
+      - db
+    networks:
+      - serverdb
+      - serverclient
+
+  client:
+    image: anamariamicu/cinema-proiect:client
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+    ports:
+      - '8003:8003'
+    depends_on:
+      - server
+      - db
+    networks:
+      - serverclient
+    stdin_open: true
+    tty: true
+
+  grafana:
+    image: grafana/grafana:latest
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./grafana:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=adminpass
+    user: "0"
+    depends_on:
+      - db
+    networks:
+      - grafanadb
+
+networks:
+  serverdb:
+  serverclient:
+  admininterface:
+  admindb:
+  grafanadb:
